manifests/qbittorrent/middleware-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-auth
  namespace: jellyfin
spec:
  basicAuth:
    secret: qbittorrent-basic-auth
    removeHeader: true
