manifests/qbittorrent/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: qbittorrent-redirect-https
  namespace: jellyfin
spec:
  redirectScheme:
    scheme: https
    permanent: true
